--- a/Cs348fiNALnotES.docx/app/build.gradle
+++ b/Cs348fiNALnotES.docx/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 
+apply plugin: 'com.google.gms.google-services'
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
@@ -26,8 +28,8 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
     testCompile 'junit:junit:4.12'
 }
 
 
-apply plugin: 'com.google.gms.google-services'
